--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body {font-size:16px;}
   
 
 <!-- Sidebar/menu -->
-<nav class="w3-sidebar w3-blue w3-collapse w3-top w3-large w3-padding" style="z-index:3;width: 300px;font-weight:bold;" id="mySidebar"><br>
+<nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding" style="z-index:3;width: 300px;font-weight:bold;" id="mySidebar"><br>
  
   <div class="w3-container">
     <img src="./images/button.png" width="100px" alt="">
